# barometer_drivers

./: .flake8  .gitignore  .travis.yml  LICENSE.txt  README.md  abcdriver.py  abci2cdriver.py  hp206c.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
barometerdrivers/: __init__.py  abstractbarometer.py  basebarometer.py  basei2c.py  hp206c.py  ms5803.py
barometerdrivers/smooth/: __init__.py  kalmanonedimension.py  ms5803smoother.py  smoothalgorithms.py
drivers/: abci2c.py  basei2c.py  hp206c.py
requirements/: base.txt  develop.txt
sample_data/: osr_1024_5_second_samples.tsv  osr_2048_5_second_samples.tsv  osr_256_5_second_samples.tsv  osr_4096_5_second_samples.tsv  osr_512_5_second_samples.tsv  sample_data_utils.py
src/barometerdrivers/: __init__.py  absi2cbarometer.py  absms5803.py  basebarometer.py  decorators.py  hp206c.py  i2creadwrite.py  ms5803.py  ms5803_01ba.py
src/barometerdrivers/helpers/: decorators.py  util.py
src/barometerdrivers/smooth/: __init__.py  ms5803smoother.py  smoothalgorithms.py
tests/: conftest.py  test_abci2c.py  test_basei2c.py  test_hp206c.py  test_i2creadwrite.py  test_ms5803.py  test_ms5803_01ba.py  test_smooth_algorithms.py  test_smoothed_ms5803_01ba.py  test_util.py
