[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barometerdrivers"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.4"
dependencies = ["smbus2"]
license = "MIT"
authors = [
  { name = "Jeffry Pincus", email = "jeffry.pincus@gmail.com" },
]

[project.urls]
Source = "https://github.com/pinkie1378/barometer_drivers"

[tool.hatch.version]
path = "src/barometerdrivers/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.isort]
profile = "black"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

[tool.hatch.envs.default.scripts]
test = 'pytest -sv --cov-report=term-missing --cov-config=pyproject.toml --cov=barometerdrivers --cov=tests'

[[tool.hatch.envs.default.matrix]]
python = ["3.9", "3.12"]
